<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ColumBUS</string>
    
    <string name="cota_information">COTA information</string>
    <string name="cabs_information">CABS information</string>
    <string name="nearby_stops">Nearby Stops</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    
     <string name="search_hint">Search Places</string>
    <string name="search_settings">Search Places</string>
	<string name="action_search">Search</string>
    
    <string name="edit_message">Whats your destination?</string>
    
<string name="button_send">Go!</string>

<string name="button_home">Home</string>
<string name="button_work">Work</string>

<string name="title_activity_main">Home</string>

<string name="title_activity_bus_line_schedule">Available options</string>
<string name="notifications">Notifications</string>
<string name="map">map</string>
<string name="permission_launch_activity"> This permission allows launching an activity in this application </string>
<string name="title_activity_cota_information">CotaInformation</string>
<string name="action_settings">Settings</string>
<string name="hello_world">Hello world!</string>
<string name="cotaInfo">COTA Information</string>
<string name="permission_launch_activity"> This permission allows launching an activity in this application </string>

<string name="preference">Preference</string>
<string name="mylocation">My Location</string>
<string name="mylocation_summ">Edit your locations</string>
<string name="myschedule">My Schedule</string>
<string name="myschedule_summ">Allow schedule alarm</string>
<string name="weathernote">Weather Notification</string>
<string name="weathernote_summ">Show weather in splashscreen</string>
<string name="temp">temporary</string>

<string name="textView1">Home</string>
<string name="textView2">Work</string>
<string name="button_add">+Add More</string>
<string name="tab1">Mon</string>
<string name="tab2">Tue</string>
<string name="tab3">Wed</string>
<string name="tab4">Thu</string>
<string name="tab5">Fri</string>
<string name="tab6">Sat</string>
<string name="tab7">Sun</string>
<string name="Set_Destination">Set Destination</string>
<string name="Set_Source">Set Source</string>
<string name="Set_Departure_Time">Set Departure Time</string>
<string name="ToggleButton">toggle button</string>
<string name="savelocations">Save Locations</string>



<string name="ok">OK</string>
<string name="cancel">Cancel</string>

<string name="options">Options</string>
<string-array name="route_options">
        <item>Best Route</item>
        <item>Fewer Transfers</item>
        <item>Less Walking</item>
	</string-array>


</resources>
