<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/preference" >

  <PreferenceScreen
  	android:key="setlocation"
  	android:title="@string/mylocation"
  	android:summary="@string/mylocation_summ">
  		   <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.example.columbus"
            android:targetClass="com.example.columbus.SaveLocations" />
  		 
  	</PreferenceScreen> 
 
   <PreferenceScreen
  	android:key="schedule_notice"
  	android:title="@string/myschedule"
  	android:summary="@string/myschedule_summ"
  	android:defaultValue="true">
   	 <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.example.columbus"
            android:targetClass="com.example.columbus.MySchedule" />
   
   </PreferenceScreen>
  
   <CheckBoxPreference
  	android:key="weather_notice"
  	android:title="@string/weathernote"
  	android:summary="@string/weathernote_summ"
  	android:defaultValue="false"
  />
   
</PreferenceScreen>

