<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item
        android:id="@+id/cota_information"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/cota_information"/>

    <item
        android:id="@+id/cabs_information"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/cabs_information"/>
    
    <item
        android:id="@+id/nearby_stops"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/nearby_stops"/>
    
    <item
        android:id="@+id/preferences"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/preferences"/>
    
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>
    
    
    

</menu>
