<?xml version="1.0" encoding="utf-8"?>

    <TabHost android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/tabHost"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <TabWidget
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@android:id/tabs"
    />
     <FrameLayout
     android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@android:id/tabcontent"
     >
     <LinearLayout
     android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@id/M"
    android:orientation="vertical"
    android:paddingTop="60px"
    android:text="@string/tab1"
     >
     <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="100px" 
   android:text="Set Source"
    android:id="@+id/txt1"
    />    
    
     </LinearLayout>
     
     <LinearLayout
     android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/T"
    android:orientation="vertical"
    android:paddingTop="60px"
      android:text="@string/tab2"
     >
     <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="100px" 
    android:text="Set Source"
    android:id="@+id/txt2"
    />
   
     </LinearLayout>
     
      <LinearLayout
     android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/W"
    android:orientation="vertical"
    android:paddingTop="60px"
    android:text="@string/tab3"
     >
     <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="100px" 
    android:text="Set Source"
    android:id="@+id/txt3"
    />
   
     </LinearLayout>
     
     <LinearLayout
     android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/T"
    android:orientation="vertical"
    android:paddingTop="60px"
    android:text="@string/tab4"
     >
     <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="100px" 
    android:text="Set Source"
    android:id="@+id/txt3"
    />
      </LinearLayout>
      
       <LinearLayout
     android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/F"
    android:orientation="vertical"
    android:paddingTop="60px"
    android:text="@string/tab5"
     >
     
           <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="100px" 
    android:text="Set Source"
    android:id="@+id/txt3"
    />
      </LinearLayout>
      
         <LinearLayout
     android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/S"
    android:orientation="vertical"
    android:paddingTop="60px"
    android:text="@string/tab6"
     >
           <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="100px" 
    android:text="Set Source"
    android:id="@+id/txt3"
    />
      </LinearLayout>
      
           <LinearLayout
     android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/S"
    android:orientation="vertical"
    android:paddingTop="60px"
    android:text="@string/tab7"
     >
           <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="100px" 
    android:text="Set Source"
    android:id="@+id/txt7"
    />

           <EditText
               android:id="@+id/editText1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:ems="5"
               android:inputType="textPostalAddress" >

               <requestFocus />
           </EditText>

           <TextView
               android:id="@+id/Set Destination"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Set Destination" />

           <EditText
               android:id="@+id/editText2"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:ems="5"
               android:inputType="textPostalAddress" />

           <ToggleButton
               android:id="@+id/toggleButton1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="ToggleButton" />

      </LinearLayout>
     </FrameLayout>
    
    </TabHost>
    